# TripPlannerDatapizza

./: .env.example  .gitignore  README.md  pyproject.toml
docker/: telemetry.compose.yml
tests/: test_cache.py  test_cli_run.py  test_contracts.py  test_demo_flow.py  test_executor.py  test_geo_tool.py  test_guardrails.py  test_itinerary_synth.py  test_orchestrator_intake.py  test_pipeline_runner.py  test_planner.py  test_poi_tool.py  test_search_tool.py  test_smoke.py  test_specialist_agents.py  test_telemetry.py  test_telemetry_console.py  test_weather_tool.py
tests/fixtures/contracts/: plan.json  standard_agent_result.json  tripspec.json
tripplanner/: __init__.py  __main__.py  cache.py  cli.py  contracts.py  demo_flow.py  executor.py  geo_tool.py  guardrails.py  itinerary_synth.py  orchestrator_intake.py  pipeline_runner.py  planner.py  poi_tool.py  run_pipeline.py  search_tool.py  specialist_agents.py  telemetry.py  weather_tool.py
